Jellypane.css
/* ... */
.layout-desktop #videoOsdPage .osdRatingsText,
.layout-tv #videoOsdPage .osdRatingsText {
  opacity: 0;
}

.itemsContainer.padded-left::before {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-size: cover;
    opacity: 0;
    z-index: -1;
    background-attachment: fixed;
    backdrop-filter: blur(10px) brightness(80%);
	background-color: #03102980;
}

#itemDetailPage .itemsContainer.padded-left::before {
    backdrop-filter: blur(0px);
}

.layout-desktop .dashboardSection, .content-primary,
.layout-tv .dashboardSection, .content-primary {
	scroll-snap-align: start;
}

.layout-desktop .backgroundContainer.withBackdrop,
.layout-tv .backgroundContainer.withBackdrop {
  background: transparent;
}

.layout-desktop .skinHeader-withBackground,
.layout-tv .skinHeader-withBackground {
	background: #04133199;
	backdrop-filter: blur(0px);
	position: fixed;
	top: 0em;
	max-height: 4em;
}

.layout-desktop .skinHeader.semiTransparent,
.layout-tv .skinHeader.semiTransparent {
	background: transparent;
	position: fixed;
	top: 0em;
	scroll-snap-align: start;
}
  
.layout-desktop .skinHeader.semiTransparent::before,
.layout-tv .skinHeader.semiTransparent {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 4em;
  background: #04133199;
  backdrop-filter: blur(0px);
  z-index: -1;
  scroll-snap-align: start;
}

.homeLibraryButton {
	margin: .5em !important;
	min-width: 11%;
	justify-content: center;
	background: #04133199;
	border-radius: 0.2em;
	transition: border 0.15s;
}

.layout-desktop .homeLibraryButton:hover,
.layout-tv .homeLibraryButton:hover {
	color: #5bc2ff;
}

.homeLibraryText {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding-right: 1em;
}

.raised {
  color: rgba(255, 255, 255, 0.87);
  background: #00153e69;
  border: 1px solid #6086e475;
}

#dashboardGeneralPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#editUserPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#mediaLibraryPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#libraryDisplayPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#metadataImagesConfigurationPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#metadataNfoPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#encodingSettingsPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#playbackConfigurationPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#streamingSettingsPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#trickplayConfigurationPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#devicePage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#dlnaSettingsPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#liveTvStatusPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#liveTvSettingsPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#networkingPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#apiKeysPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#logPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#notificationSettingPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#pluginsPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#pluginTiles .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#repositories .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#scheduledTasksPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#userProfilePage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#displayPreferencesPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#homeScreenPreferencesPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#languagePreferencesPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#controlsPreferencesPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}
#editItemMetadataPage .raised {
  color: rgba(255, 255, 255, 0.87);
  background: #002955;
}


.layout-desktop .raised.button-submit.block.btnSave.emby-button,
.layout-tv .raised.button-submit.block.btnSave.emby-button {
	scroll-snap-align: unset;
}

.layout-desktop #homeScreenPreferencesPage .listItem,
.layout-tv #homeScreenPreferencesPage .listItem {
	scroll-snap-align: unset;
}

.mainDrawer, .drawer-open {
	background: #04133199;
	backdrop-filter: blur(7px);
}

.navMenuOption:hover {
  background-color: #0e152b40;
}

.layout-desktop #homeTab .itemsContainer.padded-left.padded-right.vertical-wrap.focuscontainer-x,
.layout-tv #homeTab .itemsContainer.padded-left.padded-right.vertical-wrap.focuscontainer-x {
	justify-content: center;
}

[dir="ltr"] .padded-right, [dir="rtl"] .padded-left {
  padding-right: 1.3%;
  padding-right: max(env(safe-area-inset-right),1.3%);
}

.layout-desktop #homeTab .sections.homeSectionsContainer,
.layout-tv #homeTab .sections.homeSectionsContainer {
	margin-left: -2em;
	max-width: 102vw !important;
	margin-top: 2em;
}

.alphaPicker-fixed-right {
    right: 1em;
    right: max(env(safe-area-inset-right),1em);
    z-index: 10;
  }

.layout-desktop .detailPageWrapperContainer,
.layout-tv .detailPageWrapperContainer {
	position: absolute;
	background: transparent;
	top: 100vh;
}

.layout-desktop .detailPageWrapperContainer::before,
.layout-tv .detailPageWrapperContainer::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #04133199;
  backdrop-filter: blur(0px);
  z-index: -1; 
  pointer-events: none;
}
/* ... */

